--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="scripts/jcycle.js"></script>
 <script type="text/javascript" src="scripts/jshow.js"></script>
 <script type="text/javascript" src="scripts/jpop.js"></script>
-<title>Conquer Prime Versão 5095</title>
+<title>Conquer Prime Versï¿½o 5095</title>
 <link href="css/estilo.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -31,14 +31,14 @@
 <h1>Regras do servidor!</h1><p>
 <ul>
 <div id="regras" align="justify">
-<li>1- Não aceitaremos nenhum tipo de trapaça ou desrespeito.</li>
+<li>1- Nï¿½o aceitaremos nenhum tipo de trapaï¿½a ou desrespeito.</li>
 <li>2- Caso tenha duvidas, entre em contato conosco.</li>
-<li>3- Em caso de COMPRA, você receberá seu item ou cps após a confirmação do pagamento.</li>
-<li>4- É explicitamente proibido fazer divulgação de outros servidores ou conteúdos inapropriados em broadcast ou privado = BAN IP/DELETE.</li> 
+<li>3- Em caso de COMPRA, vocï¿½ receberï¿½ seu item ou cps apï¿½s a confirmaï¿½ï¿½o do pagamento.</li>
+<li>4- ï¿½ explicitamente proibido fazer divulgaï¿½ï¿½o de outros servidores ou conteï¿½dos inapropriados em broadcast ou privado = BAN IP/DELETE.</li> 
 </div>
 <table style="width:100%" border="0" height="90px" align="center">
   <tr>
-    <td><div id="container-concordo" class="concordo"><a title="Concordo" href="index1.php">
+    <td><div id="container-concordo" class="concordo"><a title="Concordo" href="index1.htm">
     <h2>Concordo</h2>
 </a></div></td>
     <td><div id="container-discordo" class="discordo"><a title="Discordo" href="https://www.google.com.br">
@@ -61,7 +61,7 @@
     </div>
 
     <div id="menu_right">
-		<h2>Data e horás</h2>               
+		<h2>Data e horï¿½s</h2>               
 			<ul>
                 <table id="relogio" width="100%" height="60px" border="0">
                 <td width="10%"></td>
@@ -75,14 +75,14 @@ var dayNr = now.getDate();
 var yearNr=now.getYear();
 if(dName==1) {Day = "Domingo";}
 if(dName==2) {Day = "Segunda-feira";}
-if(dName==3) {Day = "Terça-feira";}
+if(dName==3) {Day = "Terï¿½a-feira";}
 if(dName==4) {Day = "Quarta-feira";}
 if(dName==5) {Day = "Quinta-feira";}
 if(dName==6) {Day = "Sexta-feira";}
-if(dName==7) {Day = "Sábado";}
+if(dName==7) {Day = "Sï¿½bado";}
 if(mName==1){Month = "Janeiro";}
 if(mName==2){Month = "Fevereiro";}
-if(mName==3){Month = "Março";}
+if(mName==3){Month = "Marï¿½o";}
 if(mName==4){Month = "Abril";}
 if(mName==5){Month = "Maio";}
 if(mName==6){Month = "Junho";}
